# openTetris

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  annotated.html  board_8cpp.html  board_8cpp_source.html  board_8h.html  board_8h_source.html  classBoard-members.html  classBoard.html  classGame-members.html  classGame.html  classResourceManager-members.html  classResourceManager.html  classShape-members.html  classShape.html  classSpriteRenderer-members.html  classSpriteRenderer.html  classes.html  dir_3d69f64eaf81436fe2b22361382717e5.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_785c1cf9b67db0faff6246e3403bda5c.html  dir_8f6d62f5b4494c67122479728b0361d2.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  game_8cpp.html  game_8cpp_source.html  game_8h.html  game_8h_source.html  game__constants_8h.html  game__constants_8h_source.html  gl__debug_8h.html  (+56 more)
.cache/clangd/index/: glad.c.04EB6ED280311C82.idx  glad.h.EA2C9188F04A5626.idx  glfw3.h.DDD62C86372757BA.idx  input_manager.cpp.4851FBFF4B7F67E3.idx  input_manager.h.FC255FD9599B86E6.idx  khrplatform.h.B5777F7CCE91928A.idx  main.cpp.B1BF0257E448354D.idx  test.cpp.6666F151C23206BB.idx  test.h.EBAF565E98A0E3F9.idx  window_manager.cpp.F5065B2551082853.idx  window_manager.h.E30EE83CA344F0B7.idx
.github/workflows/: clang-tidy.yml  cmake-multi-platform.yml  docs.yml  lint-test.yml
docs/: Doxyfile.in
docs/tutorials/: tutorial.md
include/: app.h  camera.h  element_buffer_object.h  game_object.h  input_manager.h  open_gl_calls.h  program.h  renderer.h  resource_manager.h  scene_manager.h  shader.h  texture.h  vertex_array_object.h  vertex_buffer_object.h  window_manager.h
include/core/: game_object.h  gl_debug.h  logger.h  resource_manager.h  shader.h  sprite_renderer.h  texture.h  window_manager.h
main/: CMakeLists.txt  main.cpp
res/shaders/: fragment.frag  sprite.frag  sprite.vert  vertex.vert
search/: all_1.js  all_10.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_4.js  all_5.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  files_1.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  (+25 more)
src/: CMakeLists.txt  app.cpp  camera.cpp  element_buffer_object.cpp  game_object.cpp  input_manager.cpp  open_gl_calls.cpp  program.cpp  renderer.cpp  resource_manager.cpp  scene_manager.cpp  shader.cpp  texture.cpp  vertex_array_object.cpp  vertex_buffer_object.cpp  window_manager.cpp
src/core/: CMakeLists.txt  game_object.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  texture.cpp  window_manager.cpp
src/glad/: glad.c
src/openTetris/: CMakeLists.txt  board.cpp  board.h  game.cpp  game.h  game_constants.h  shape.cpp  shape.h  tile.h
tests/: CMakeLists.txt  test_board.cpp  test_shape.cpp
